[package]
name = "liebert"
version = "0.2.0"
authors = ["Vultour <vultour@users.noreply.github.com>"]

[dependencies]
log = "0.3.6"
toml = "0.2.0"
clap = "2.10.0"
time = "0.1.35"
env_logger = "0.3.5"
chan-signal = "0.1.6"
chan = "0.1.18"

[[bin]]
name = "liebert-agent"
path = "src/agent-main.rs"

[[bin]]
name = "liebert-controller"
path = "src/controller-main.rs"

[[bin]]
name = "liebert-chkconf"
path = "src/chkconf.rs"
